fix: removed off-screen progress bar

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -11,6 +11,5 @@ html, body {
 }
 
 .progress {
-  width: 100%;
   max-width: 800px;
 }
